--- a/jfreereport/source/com/jrefinery/report/jfreereport.properties
+++ b/jfreereport/source/com/jrefinery/report/jfreereport.properties
@@ -18,6 +18,16 @@ com.jrefinery.report.preview.plugin.excel=true
 com.jrefinery.report.preview.plugin.plain=true
 
 #
+# Defines a stricter error handling, if set to true, then all errors that
+# occur during the report processing will cause the report processing to fail.
+# It is safe to set this to true, as valid reports never throw exceptions.
+#
+# Anyway, this defaults to false, as this the old behaviour, we don't want
+# to break backward compatibility yet.
+#
+#com.jrefinery.report.StrictErrorHandling=true
+
+#
 # Enable aliasing for Graphics2D. This may result is textlayout errors.
 # If your text is not correctly aligned, disable this property.
 #
