--- a/jfreereport-ext/ant/build.xml
+++ b/jfreereport-ext/ant/build.xml
@@ -206,6 +206,8 @@
   </target>
 
   <!-- Make .zip distribution for JFreeReport -->
+  <!-- the war file is not included, as it can be rebuild easily and is also available -->
+  <!-- as an separate download -->
   <target name="make-zip" depends="compile, build-war">
 
     <!-- make a temporary distribution directory -->
@@ -222,9 +224,6 @@
 
     <!-- copy across runtime jar file -->
     <copy file="${projectdir}/${jfreereport-ext.name}-${jfreereport-ext.version}.jar" tofile="${projectdir}/distribution/${jfreereport-ext.name}-${jfreereport-ext.version}.jar"/>
-
-    <!-- copy across war file -->
-    <copy file="${projectdir}/${jfreereport-ext.name}-${jfreereport-ext.version}.war" tofile="${projectdir}/distribution/${jfreereport-ext.name}-${jfreereport-ext.version}.war" failonerror="false"/>
 
     <!-- copy across source files -->
     <copy todir="${projectdir}/distribution/source">
@@ -266,6 +265,8 @@
   </target>
 
   <!-- Make .tar.gz distribution for JFreeReport -->
+  <!-- the war file is not included, as it can be rebuild easily and is also available -->
+  <!-- as an separate download -->
   <target name="make-targz" depends="compile, build-war">
 
     <!-- make a temporary distribution directory -->
@@ -282,9 +283,6 @@
 
     <!-- copy across runtime jar file -->
     <copy file="${projectdir}/${jfreereport-ext.name}-${jfreereport-ext.version}.jar" tofile="${projectdir}/distribution/${jfreereport-ext.name}-${jfreereport-ext.version}.jar"/>
-
-    <!-- copy across war file -->
-    <copy file="${projectdir}/${jfreereport-ext.name}-${jfreereport-ext.version}.war" tofile="${projectdir}/distribution/${jfreereport-ext.name}-${jfreereport-ext.version}.war" failonerror="false"/>
 
     <!-- copy across source files -->
     <copy todir="${projectdir}/distribution/source">
