--- a/jfreereport/source/com/jrefinery/report/jfreereport.properties
+++ b/jfreereport/source/com/jrefinery/report/jfreereport.properties
@@ -12,10 +12,10 @@
 com.jrefinery.report.LogLevel=Debug
 
 com.jrefinery.report.preview.plugin.pdf=true
-com.jrefinery.report.preview.plugin.csv=false
-com.jrefinery.report.preview.plugin.html=false
-com.jrefinery.report.preview.plugin.excel=false
-com.jrefinery.report.preview.plugin.plain=false
+com.jrefinery.report.preview.plugin.csv=true
+com.jrefinery.report.preview.plugin.html=true
+com.jrefinery.report.preview.plugin.excel=true
+com.jrefinery.report.preview.plugin.plain=true
 
 #
 # Defines a stricter error handling, if set to true, then all errors that
