--- a/jfreereport/ant/build.xml
+++ b/jfreereport/ant/build.xml
@@ -26,7 +26,7 @@
         <property name="libdir" value="${projectdir}/lib" />
         <property name="BeanShell-jar" value="bsh-1.2b6.jar" />
         <property name="GnuJAXP-jar" value="gnujaxp.jar" />
-        <property name="iText-jar" value="iText-0.96.jar" />
+        <property name="iText-jar" value="itext-0.98.jar" />
         <property name="JCommon-jar" value="jcommon-0.7.2.jar" />
         <property name="Pixie-jar" value="pixie.jar" />
         <property name="POI-jar" value="jakarta-poi-1.5.1-final-20020615.jar" />
@@ -41,7 +41,7 @@
         </path>
 
         <property name="jfreereport.name" value="jfreereport" />
-        <property name="jfreereport.version" value="0.8.1_02" />
+        <property name="jfreereport.version" value="0.8.2" />
     </target>
 
     <!-- Compile the JFreeReport classes -->
