--- a/jfreereport/source/com/jrefinery/report/jfreereport.properties
+++ b/jfreereport/source/com/jrefinery/report/jfreereport.properties
@@ -11,6 +11,10 @@
 # The minimum loglevel that is logged
 com.jrefinery.report.LogLevel=Debug
 
+#
+# These properties define whether a specific export plugin will be available
+# in the preview dialog. To disable a plugin by default, set the property to "false".
+#
 com.jrefinery.report.preview.plugin.pdf=true
 com.jrefinery.report.preview.plugin.csv=true
 com.jrefinery.report.preview.plugin.html=true
@@ -61,7 +65,7 @@ com.jrefinery.report.PrintOperationComment=false
 #
 # Should the datarow print warning on invalid columns? Invalid column requests always
 # return null, if set to true, an additional logging entry is added
-com.jrefinery.report.WarnInvalidColumns=false
+com.jrefinery.report.WarnInvalidColumns=true
 
 #
 # The tablemodel factory mode for the ResultSetTableModelFactory
@@ -99,6 +103,21 @@ com.jrefinery.report.NoDefaultDebug=false
 # The value is not defined by default
 #com.jrefinery.report.preview.MaximumHeight=600
 
+#
+# The property that defines which encodings are available in the export dialogs.
+# This property defaults to "all" and can be set to either "all", "none" or "file".
+#
+# If the property is set to "file", then the list of available properties is read
+# from the file defined in the property "com.jrefinery.report.encodings.file".
+com.jrefinery.report.encodings.available=none
+
+#
+# The name of the properties file used to define the available encodings.
+# The property points to a resources in the classpath, not to a real file!
+com.jrefinery.report.encodings.file=/com/jrefinery/report/jfreereport-encodings.properties
+
+
+##
 #
 # The PDFTarget can be configured using these properties. This will create a default configuration
 # which can be altered by the programm using the usual operations.
