Some minor beauty fixes :) .. also removed debug messages ...

--- a/jfreereport/source/com/jrefinery/report/jfreereport.properties
+++ b/jfreereport/source/com/jrefinery/report/jfreereport.properties
@@ -109,7 +109,7 @@ com.jrefinery.report.NoDefaultDebug=false
 #
 # If the property is set to "file", then the list of available properties is read
 # from the file defined in the property "com.jrefinery.report.encodings.file".
-com.jrefinery.report.encodings.available=none
+com.jrefinery.report.encodings.available=file
 
 #
 # The name of the properties file used to define the available encodings.
