--- a/jfreereport/ant/build.xml
+++ b/jfreereport/ant/build.xml
@@ -26,10 +26,10 @@
         <property name="libdir" value="${projectdir}/lib" />
         <property name="BeanShell-jar" value="bsh-1.2b6.jar" />
         <property name="GnuJAXP-jar" value="gnujaxp.jar" />
-        <property name="iText-jar" value="itext-0.98.jar" />
+        <property name="iText-jar" value="itext-0.99.jar" />
         <property name="JCommon-jar" value="jcommon-0.8.0.jar" />
         <property name="Pixie-jar" value="pixie.jar" />
-        <property name="POI-jar" value="jakarta-poi-1.5.1-final-20020615.jar" />
+        <property name="POI-jar" value="jakarta-poi-1.10.0-dev-20030222.jar" />
 
         <path id="build.classpath">
             <pathelement location="${libdir}/${BeanShell-jar}" />
@@ -41,7 +41,7 @@
         </path>
 
         <property name="jfreereport.name" value="jfreereport" />
-        <property name="jfreereport.version" value="0.8.2" />
+        <property name="jfreereport.version" value="0.8.3" />
     </target>
 
     <!-- Compile the JFreeReport classes -->
