Updated export plugins .. extended export plugin interface to allow totaly generic plugin instantiation ...

--- a/jfreereport/source/com/jrefinery/report/jfreereport.properties
+++ b/jfreereport/source/com/jrefinery/report/jfreereport.properties
@@ -20,6 +20,8 @@ com.jrefinery.report.preview.plugin.csv=true
 com.jrefinery.report.preview.plugin.html=true
 com.jrefinery.report.preview.plugin.excel=true
 com.jrefinery.report.preview.plugin.plain=true
+com.jrefinery.report.preview.plugin.page-setup=true
+com.jrefinery.report.preview.plugin.print=true
 
 #
 # Defines a stricter error handling, if set to true, then all errors that
