Final fix for StyleSheetCollection. Fix for TableWriter bug ...

--- a/jfreereport/source/com/jrefinery/report/preview/previewplugins.properties
+++ b/jfreereport/source/com/jrefinery/report/preview/previewplugins.properties
@@ -1,5 +1,5 @@
 #
-#
+# This is a temporary file, until a module infrastructure is defined.
 #
 pdf=com.jrefinery.report.preview.PDFExportPlugin
 excel=com.jrefinery.report.preview.ExcelExportPlugin
