--- a/jfreereport-ext/ant/build.properties
+++ b/jfreereport-ext/ant/build.properties
@@ -2,7 +2,7 @@
 # Defines the JFreeReport base project directory, this is the directory, where the file 
 # jfreereport-xxx.jar and jfreereport-xxx-demo.jar are located.
 #
-jfreereport-dir=../../../jfreereport/jfreereport
+jfreereport-dir=../../jfreereport
 
 #
 # Optional: Define the library path, where the required jar files are located.
