Updated iText to version 1.0, documentation and performance improvments for StyleSheetCollection...

--- a/jfreereport/source/com/jrefinery/report/jfreereport.properties
+++ b/jfreereport/source/com/jrefinery/report/jfreereport.properties
@@ -201,4 +201,4 @@ com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.ownerpasswo
 # Whether to apply the Cell-DataFormat strings to excel cells.
 # If disabled, all content is inserted as text. So you won't be able to perform
 # calculations, but it is more safe in case of invalid cell formats.
-com.jrefinery.report.targets.table.excel.EnhancedDataFormat=false
+com.jrefinery.report.targets.table.excel.EnhancedDataFormat=true
