--- a/jfreereport/ant/build.xml
+++ b/jfreereport/ant/build.xml
@@ -26,7 +26,7 @@
         <property name="libdir" value="${projectdir}/lib" />
         <property name="BeanShell-jar" value="bsh-1.2b6.jar" />
         <property name="GnuJAXP-jar" value="gnujaxp.jar" />
-        <property name="iText-jar" value="itext-0.99.jar" />
+        <property name="iText-jar" value="itext-1.00.jar" />
         <property name="JCommon-jar" value="jcommon-0.8.3.jar" />
         <property name="Pixie-jar" value="pixie-0.8.0.jar" />
         <property name="POI-jar" value="jakarta-poi-1.10.0-dev-20030222.jar" />
@@ -41,7 +41,7 @@
         </path>
 
         <property name="jfreereport.name" value="jfreereport" />
-        <property name="jfreereport.version" value="0.8.3c" />
+        <property name="jfreereport.version" value="0.8.3d" />
     </target>
 
     <!-- Compile the JFreeReport classes -->
